--- a/index.html
+++ b/index.html
@@ -30,49 +30,60 @@
                 <p class="tp2">Nascidos na capital de São Paulo decidimos nos mudar para Andradas-MG há 3 anos. Nesse tempo tivemos o privilégio de conhecer mais a fundo as maravilhas dos produtos mineiros. <br> <br> Trazemos aqui uma seleção especial dos produtos mais consumidos na nossa cidade. E claro, trazemos aqueles que mais amamos.</p>
             </div>         
         </section>
-        <section id="carrosel">
+        <section id="products">
             <div class="faixaDiv2">
                 <h3 class="c3"
                 >Conheça nossos produtos</h3>
             </div>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="./img/close coraçaõ.jpg" alt="Biscoito Nata Coração">
-                        <div class="carousel-caption">
-                            <h5>Rosquinhas Mineiras</h5>
-                            <p>Cookies, Torradinhas e bolachas</p>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./img/cooler.png" alt="Cooler de Pêssego">
-                        <div class="carousel-caption">
-                            <h5>Cooler de Pêssego</h5>
-                            <p>Vinhos, Champagnes e Frisantes</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./img/queijo.png" alt="Queijo Canastra">
-                        <div class="carousel-caption">
-                            <h5>Queijos</h5>
-                            <p>Doces, Goiabadas e muito mais.</p>
-                        </div>
-                    </div>
-                  </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Anterior</span>
+            <div class="imgp">
+                <figure>
+                    <a class="pd" href="">
+                        <img src="./img/close coraçaõ.jpg" alt="Roca nata coração" />
+                        <figcaption>
+                           <b><p>Rosquinhas </b> <br>Cookies, Biscoitos e Bolachas</p>
+                        </figcaption>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                         <span class="sr-only">Próximo</span>
+                </figure>
+                <figure>
+                    <a class="pd" href="">
+                        <img src="./img/doce.png" alt="Doce de leite"/>
+                        <figcaption>
+                            <b><p>Doces</b> <br>Doce de Leite, Cocada Cremosa, Goiabada.</p>
+                        </figcaption>
                     </a>
+                </figure>
+                <figure>
+                    <a class="pd" href="">
+                        <img src="./img/cooler.png" alt="Cooler de Pêssego"/>
+                        <figcaption>
+                            <b><p>Cooler de Pêssego</b> <br>Cachaças e bebidas finas.</p>
+                        </figcaption>
+                    </a>
+                </figure>
+                <figure>
+                    <a class="pd" href="">
+                        <img src="./img/vinhos.png" alt="Vinho" />
+                        <figcaption>
+                            <b><p>Vinhos</b> <br>Champagnes, Frisantes.</p>
+                        </figcaption>
+                    </a>
+                </figure>
+                <figure>
+                    <a class="pd" href="">
+                        <img src="./img/queijo.png" alt="Queijo" />
+                        <figcaption>
+                            <b><p>Queijos</b> <br>Meia Cura, Fresco, Padrão, entre outros.</p>
+                        </figcaption>
+                    </a>
+                </figure>
+                <div class="click">
+                    <H3>Clique nos produtos acima e saiba mais!</H3>
                 </div>
+            </div>
+            <footer class="fixarRodape">
+                <p>2024 | Desenvolvido por Alexandre Costa Santos</p>
+            </footer>
+            
 
         </section>
     </header>
