atualização de layout

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 </head>
 <body>
     <header id="header">
-        <img class="logo1" src="./img/logo1.png" alt="">
+        <img class="logo1" src="./img/2.png" alt="Logo Sabores em Andradas">
+    </header>
+    <section class="content">
+        <img class="banner2" src="./img/banner 1 produtos.webp" alt="">
         <div class="faixa1">
             <a href="https://wa.me/5511957958177">
                 <img class="icone" src="./img/WhatsApp-icone.png" alt="">
                 <h2 class="contato">Clique aqui e faça o seu pedido <br> pelo whatsapp!</h2>
             </a>
         </div>
-    </header>
-    <section class="content">
-        <img class="banner2" src="./img/banner 1 produtos.webp" alt="">
         <div class="faixaDiv"></div>
         <div class="textop">
             <!-- <img class="fundom" src="./img/fundo-de-madeira.jpg" alt=""> -->
