atualizaçao do layout

--- a/index.html
+++ b/index.html
@@ -16,24 +16,21 @@
         <img class="logo1" src="./img/2.png" alt="Logo Sabores em Andradas">
     </header>
     <section class="content">
-        <img class="banner2" src="./img/banner 1 produtos.webp" alt="">
-        <div class="faixa1">
-            <a href="https://wa.me/5511957958177">
-                <img class="icone" src="./img/WhatsApp-icone.png" alt="">
-                <h2 class="contato">Clique aqui e faça o seu pedido <br> pelo whatsapp!</h2>
-            </a>
+        <ul class="menu">
+            <li><a class="itemMenu" href="">ROSQUINHAS</a></li>
+            <li><a class="itemMenu" href="">DOCES</a></li>
+            <li><a class="itemMenu" href="">BEBIDAS</a></li>
+            <li><a class="itemMenu" href="">VINHOS</a></li>
+            <li><a class="itemMenu" href="">QUEIJOS</a></li>
+        </ul>
+        <div class="if">
+            <img class="imgfinal" src="./img/banner 1 produtos.webp" alt="">
         </div>
-        <div class="faixaDiv"></div>
-        <div class="textop">
-            <!-- <img class="fundom" src="./img/fundo-de-madeira.jpg" alt=""> -->
-            <h1 class="tp">Por que somos diferentes?</h1>
-            <p class="tp2">Nascidos na capital de São Paulo, decidimos nos mudar para Andradas no Sul de Minas Gerais há 3 anos. <br><br> Nesse tempo tivemos o privilégio de conhecer mais a fundo as maravilhas dos produtos e o melhor da culinária mineira. <br> <br> Trazemos aqui uma seleção especial dos produtos mais consumidos na nossa cidade. E claro, trazemos aqueles que mais amamos.</p>
-        </div>         
     </section>
+   
     <section id="products">
         <div class="faixaDiv2">
-            <h3 class="c3"
-            >Conheça nossos produtos</h3>
+            <h2 class="c3">Conheças os nossos produtos</h2>
         </div>
         <div class="ip">
             <figure>
@@ -76,10 +73,23 @@
                     </figcaption>
                 </a>
             </figure>
-            <div class="click">
-                <H5>Clique nos produtos acima e saiba mais!</H5>
-            </div>
         </div>
+        
+        <!-- <div class="click">
+            <H5>Clique nos produtos acima e saiba mais!</H5>
+        </div> -->
+        
+        <div class="textop" style="background-color: transparent;">
+            <!-- <img class="fundom" src="./img/fundo-de-madeira.jpg" alt=""> -->
+            <h1 class="tp">Por que somos diferentes?</h1>
+            <p class="tp2">Nascidos na capital de São Paulo, há 3 anos escolhemos Andradas no Sul de Minas Gerais para chamar de lar. <br><br> Aqui tivemos o privilégio de conhecer mais a fundo o melhor dos produtos e da culinária mineira. <br> <br> Trazemos para SP uma seleção especial dos produtos mais consumidos na nossa cidade. E claro, indicamos sempre aqueles que mais amamos.</p>
+            <div class="faixa1">
+                <a href="https://wa.me/5511957958177">
+                    <img class="icone" src="./img/WhatsApp-icone.png" alt="">
+                    <h2 class="contato">Clique aqui e faça o seu pedido <br> pelo whatsapp!</h2>
+                </a>
+            </div>
+        </div>      
         <footer class="fixarRodape">
             <p>2024 | Desenvolvido por Alexandre Costa Santos</p>
         </footer>
