--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    
     <section id="products">
         <div class="faixaDiv2">
-            <h2 class="c3">Conheças os nossos produtos</h2>
+            <h2 class="c3">Conheça os nossos produtos</h2>
         </div>
         <div class="ip">
             <figure>
@@ -79,19 +79,19 @@
             <H5>Clique nos produtos acima e saiba mais!</H5>
         </div> -->
         
-        <div class="textop" style="background-color: transparent;">
+        <div class="textop" >
             <!-- <img class="fundom" src="./img/fundo-de-madeira.jpg" alt=""> -->
             <h1 class="tp">Por que somos diferentes?</h1>
             <p class="tp2">Nascidos na capital de São Paulo, há 3 anos escolhemos Andradas no Sul de Minas Gerais para chamar de lar. <br><br> Aqui tivemos o privilégio de conhecer mais a fundo o melhor dos produtos e da culinária mineira. <br> <br> Trazemos para SP uma seleção especial dos produtos mais consumidos na nossa cidade. E claro, indicamos sempre aqueles que mais amamos.</p>
             <div class="faixa1">
-                <a href="https://wa.me/5511957958177">
+                <a class="wpp" href="https://wa.me/5511957958177">
                     <img class="icone" src="./img/WhatsApp-icone.png" alt="">
-                    <h2 class="contato">Clique aqui e faça o seu pedido <br> pelo whatsapp!</h2>
+                    <h2 class="contato">Clique aqui e faça o seu pedido <br> pelo WhatsApp!</h2>
                 </a>
             </div>
         </div>      
         <footer class="fixarRodape">
-            <p>2024 | Desenvolvido por Alexandre Costa Santos</p>
+            <p>2024 | Desenvolvido por Alexandre Costa</p>
         </footer>
         
 
