atualização para layout grid

--- a/index.html
+++ b/index.html
@@ -32,53 +32,69 @@
         <div class="faixaDiv2">
             <h2 class="c3">Conheça os nossos produtos</h2>
         </div>
-        <div class="ip">
-            <figure>
-                <a class="pd" href="./index6.html">
-                    <img class="imgp" src="./img/close coraçaõ.jpg" alt="Roca nata coração" />
-                    <figcaption>
-                       <b><p>Rosquinhas </b> <br>Cookies, Biscoitos e Bolachas</p>
-                    </figcaption>
-                </a>
-            </figure>
-            <figure>
-                <a class="pd" href="./index5.html">
-                    <img class="imgp" src="./img/doce.png" alt="Doce de leite"/>
-                    <figcaption>
-                        <b><p>Doces</b> <br>Doce de Leite, Cocada Cremosa, Goiabada.</p>
-                    </figcaption>
-                </a>
-            </figure>
-            <figure>
-                <a class="pd" href="./index4.html">
-                    <img class="imgp" src="./img/cooler.png" alt="Cooler de Pêssego"/>
-                    <figcaption>
-                        <b><p>Cooler de Pêssego</b> <br>Cachaças e bebidas finas.</p>
-                    </figcaption>
-                </a>
-            </figure>
-            <figure>
-                <a class="pd" href="./index3.html">
-                    <img class="imgp" src="./img/vinhos.png" alt="Vinho" />
-                    <figcaption>
-                        <b><p>Vinhos</b> <br>Champagnes, Frisantes.</p>
-                    </figcaption>
-                </a>
-            </figure>
-            <figure>
-                <a class="pd" href="./index2.html">
-                    <img class="imgp" src="./img/queijo.png" alt="Queijo" />
-                    <figcaption>
-                        <b><p>Queijos</b> <br>Meia Cura, Fresco, Padrão, entre outros.</p>
-                    </figcaption>
-                </a>
-            </figure>
-        </div>
-        
-        <!-- <div class="click">
-            <H5>Clique nos produtos acima e saiba mais!</H5>
-        </div> -->
-        
+        <div class="container">
+
+            <div class="item">
+                <figure>
+                    <a class="pd" href="./index6.html">
+                        <img class="imgp" src="./img/close coraçaõ.jpg" alt="Roca nata coração" />
+                        <figcaption>
+                            <b><p>Rosquinhas </b> <br>Cookies, Biscoitos e Bolachas</p>
+                        </figcaption>
+                    </a>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <a class="pd" href="./index5.html">
+                        <img class="imgp" src="./img/doce.png" alt="Doce de leite"/>
+                        <figcaption>
+                            <b><p>Doces</b> <br>Doce de Leite, Cocada Cremosa, Goiabada</p>
+                        </figcaption>
+                    </a>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <a class="pd" href="./index4.html">
+                        <img class="imgp" src="./img/cooler.png" alt="Cooler de Pêssego"/>
+                        <figcaption>
+                            <b><p>Cooler de Pêssego</b> <br>Cachaças e Bebidas Finas</p>
+                        </figcaption>
+                    </a>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <a class="pd" href="./index3.html">
+                        <img class="imgp" src="./img/vinhos.png" alt="Vinho" />
+                        <figcaption>
+                            <b><p>Vinhos</b> <br>Champagnes, Frisantes</p>
+                        </figcaption>
+                    </a>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <a class="pd" href="./index2.html">
+                        <img class="imgp" src="./img/queijo.png" alt="Queijo" />
+                        <figcaption>
+                            <b><p>Queijos</b> <br>Meia Cura, Fresco, Padrão, entre outros</p>
+                        </figcaption>
+                    </a>
+                </figure>          
+            </div>
+            <div class="item">
+                <figure>
+                    <a class="pd" href="./index2.html">
+                        <img class="imgp" src="./img/kit petisco.png" alt="Kit Petisco" />
+                        <figcaption>
+                            <b><p>Kit Pestiscos</b> <br>e outros</p>
+                        </figcaption>
+                    </a>
+                </figure>
+            </div>
+        </div>        
         <div class="textop" >
             <!-- <img class="fundom" src="./img/fundo-de-madeira.jpg" alt=""> -->
             <h1 class="tp">Por que somos diferentes?</h1>
