--- a/index6.html
+++ b/index6.html
@@ -12,42 +12,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-<section id="produtosg">
-    <h1>Rosquinhas, Cookies, Torradinhas e Bolachas</h1>
-    <figure>
-            <img class="imgp" src="./img/queijo teste.png" alt="queijo teste" />
-            <figcaption>
-               <b><p>R$29.30</b> <br>Queijo Meia Cura 500gr</p>
-            </figcaption>
-    </figure>
-    <figure>
-            <img class="imgp" src="./img/queijo.png" alt="Queijo" />
-            <figcaption>
-                <b><p>R$28,90</b> <br>Queijo Mussarela Barrinha 500gr</p>
-            </figcaption>
-    </figure>
-    <figure>
-            <img class="imgp" src="./img/queijo teste.png" alt="queijo teste" />
-            <figcaption>
-                <b><p>R$31,90</b> <br>Queijo Minas Padrão 500gr</p>
-            </figcaption>
-    </figure>
-    <figure>
-            <img class="imgp" src="./img/queijo.png" alt="Queijo" />
-            <figcaption>
-                <b><p>R$24,90</b> <br>Queijo Minas Frescal 500gr</p>
-            </figcaption>
-    </figure>
-    <figure>
-            <img class="imgp" src="./img/queijo teste.png" alt="queijo teste" />
-            <figcaption>
-                <b><p>R$18,90</b> <br>Queijo mussarela Nozinho Temperado</p>
-            </figcaption>
-    </figure>
-    <div class="click">
-        <a class="voltar" href="./index.html"><H5>Clique aqui para voltar a todos os produtos!</H5></a>
+    <div>
+        <h1>Rosquinhas, Cookies, Torradinhas e Bolachas</h1>
     </div>
-</section>
+
+    
+<div class="click">
+    <a class="voltar" href="./index.html"><H5>Clique aqui para voltar a todos os produtos!</H5></a>
+</div>
     <footer class="fixarRodape">
          <p>2024 | Desenvolvido por Alexandre Costa Santos</p>
     </footer>
