--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </header>
     <section class="content">
         <ul class="menu">
-            <li><a class="itemMenu" href="">ROSQUINHAS</a></li>
-            <li><a class="itemMenu" href="">DOCES</a></li>
-            <li><a class="itemMenu" href="">BEBIDAS</a></li>
-            <li><a class="itemMenu" href="">VINHOS</a></li>
-            <li><a class="itemMenu" href="">QUEIJOS</a></li>
+            <li><a class="itemMenu" href="./index6.html">ROSQUINHAS</a></li>
+            <li><a class="itemMenu" href="./index5.html">DOCES</a></li>
+            <li><a class="itemMenu" href="./index4.html">BEBIDAS</a></li>
+            <li><a class="itemMenu" href="./index3.html">VINHOS</a></li>
+            <li><a class="itemMenu" href="./index2.html">QUEIJOS</a></li>
         </ul>
         <div class="if">
             <img class="imgfinal" src="./img/banner 1 produtos.webp" alt="">
