--- a/index3.html
+++ b/index3.html
@@ -5,52 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinhos</title>
     <link rel="shortcut icon" type="imagex/png" href="./img/logo">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Inter:wght@400;500&family=Righteous&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./css/style3.css">
 </head>
 <body>
-<section id="produtosg">
-    <h1>Vinhos, Champagnes e Frisantes</h1>
-    <figure>
-            <img class="imgp" src="./img/queijo teste.png" alt="queijo teste" />
-            <figcaption>
-               <b><p>R$29.30</b> <br>Queijo Meia Cura 500gr</p>
-            </figcaption>
-    </figure>
-    <figure>
-            <img class="imgp" src="./img/queijo.png" alt="Queijo" />
-            <figcaption>
-                <b><p>R$28,90</b> <br>Queijo Mussarela Barrinha 500gr</p>
-            </figcaption>
-    </figure>
-    <figure>
-            <img class="imgp" src="./img/queijo teste.png" alt="queijo teste" />
-            <figcaption>
-                <b><p>R$31,90</b> <br>Queijo Minas Padrão 500gr</p>
-            </figcaption>
-    </figure>
-    <figure>
-            <img class="imgp" src="./img/queijo.png" alt="Queijo" />
-            <figcaption>
-                <b><p>R$24,90</b> <br>Queijo Minas Frescal 500gr</p>
-            </figcaption>
-    </figure>
-    <figure>
-            <img class="imgp" src="./img/queijo teste.png" alt="queijo teste" />
-            <figcaption>
-                <b><p>R$18,90</b> <br>Queijo mussarela Nozinho Temperado</p>
-            </figcaption>
-    </figure>
-    <div class="click">
-        <a class="voltar" href="./index.html"><H5>Clique aqui para voltar a todos os produtos!</H5></a>
-    </div>
-</section>
-    <footer class="fixarRodape">
-         <p>2024 | Desenvolvido por Alexandre Costa Santos</p>
-    </footer>
+    <section id="produtosg">
+        <div class="tema">
+            <h1 class="tema1">Vinhos</h1>
+            <p>Conheça o sabor e a qualidade dos vinhos da Vinícola Casa Geraldo que possuem prêmios internacionais!</p>
+        </div>
+        <div class="container">
+
+            <div class="item">
+                <figure>
+                    <div class="pd">
+                        <img class="imgp" src="./img/z borodo origens.png" alt="Roca nata coração" />
+                        <figcaption>
+                            <b><p>Bordô Origens</b> <br>R$45,90</p>
+                        </figcaption>
+                    </div>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <div class="pd">
+                        <img class="imgp" src="./img/z reserva signature carbenet suavignon.png" alt="Kit Petisco" />
+                        <figcaption>
+                            <b><p>Carbenet Suavignon</b> <br>R$79,90</p>
+                        </figcaption>
+                    </div>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <div class="pd">
+                        <img class="imgp" src="./img/z campino suave.png" alt="Doce de leite"/>
+                        <figcaption>
+                            <b><p>Campino Suave</b> <br>R$29,90</p>
+                        </figcaption>
+                    </div>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <div class="pd">
+                        <img class="imgp" src="./img/z espumante moscatel.png" alt="Cooler de Pêssego"/>
+                        <figcaption>
+                            <b><p>Espumante Moscatel</b> <br>R$54,90</p>
+                        </figcaption>
+                    </div>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <div class="pd">
+                        <img class="imgp" src="./img/z frisante.png" alt="Vinho" />
+                        <figcaption>
+                            <b><p>Frisante Casa Geraldo</b> <br>R$58,90</p>
+                        </figcaption>
+                    </div>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <div class="pd">
+                        <img class="imgp" src="./img/z suco prop.png" alt="Doce de leite"/>
+                        <figcaption>
+                            <b><p>Suco de Uva integral</b> <br>R$24,90</p>
+                        </figcaption>
+                    </div>
+                </figure>
+            </div>
+            <div class="item">
+                <figure>
+                    <div class="pd">
+                        <img class="imgp" src="./img/z reserva signature carbenet franc.png" alt="Queijo" />
+                        <figcaption>
+                            <b><p>Cabernet Franc</b> <br>R$89,90</p>
+                        </figcaption>
+                    </div>
+                </figure>          
+            </div>
+            <div class="item">
+                <figure>
+                    <div class="pd">
+                        <img class="imgp" src="./img/z suave campino prop.png" alt="Roca nata coração" />
+                        <figcaption>
+                            <b><p>Assamblage Campino</b> <br>R$29,90</p>
+                        </figcaption>
+                    </div>
+                </figure>
+            </div>
+        </div>  
+        <div class="click">
+            <a class="voltar" href="./index.html"><H5>Voltar</H5></a>
+        </div>
+           
+    </section>
+
     
+
+    <footer class="fixarRodape">
+         <p>2024 | Desenvolvido por Alexandre Costa</p>
+    </footer>
 </body>
 </html>
